apps/internal/pihole/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: svc-pihole
  labels:
    gitops: flux
