apps/internal/pihole/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole-web
  namespace: svc-pihole
  labels: { app: pihole }
spec:
  type: ClusterIP
  selector:
    app: pihole
    statefulset.kubernetes.io/pod-name: pihole-0
  ports:
    - name: http
      port: 80
      targetPort: http
